--- a/src/SECTool.form
+++ b/src/SECTool.form
@@ -105,7 +105,7 @@
                   </grid>
                 </children>
               </grid>
-              <grid id="61efe" binding="parametersPanel" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="61efe" binding="parametersPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="4" left="0" bottom="2" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
@@ -349,7 +349,7 @@
                                   </grid>
                                 </constraints>
                                 <properties>
-                                  <text value="1.01"/>
+                                  <text value="1.1"/>
                                 </properties>
                               </component>
                             </children>
@@ -358,7 +358,7 @@
                       </grid>
                     </children>
                   </grid>
-                  <grid id="2229b" binding="OutMergePanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
+                  <grid id="2229b" binding="OutMergePanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -370,7 +370,7 @@
                     <children>
                       <component id="e8f1c" class="javax.swing.JButton" binding="outputDirButton" default-binding="true">
                         <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-1315861"/>
@@ -378,19 +378,9 @@
                           <text value="Output Dir"/>
                         </properties>
                       </component>
-                      <component id="f3dd9" class="javax.swing.JButton" binding="MERGEButton" default-binding="true">
-                        <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <background color="-1315861"/>
-                          <foreground color="-12086017"/>
-                          <text value="MERGE"/>
-                        </properties>
-                      </component>
                       <component id="b9697" class="javax.swing.JButton" binding="clearSamplesButton" default-binding="true">
                         <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-1315861"/>
@@ -400,7 +390,7 @@
                       </component>
                       <component id="36825" class="javax.swing.JButton" binding="clearBuffersButton" default-binding="true">
                         <constraints>
-                          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-1315861"/>
@@ -410,10 +400,11 @@
                       </component>
                       <component id="e4e87" class="javax.swing.JButton" binding="editDetailsButton" default-binding="true">
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <background color="-1315861"/>
+                          <foreground color="-12086017"/>
                           <text value="Edit Details"/>
                         </properties>
                       </component>
@@ -530,6 +521,17 @@
                     <properties>
                       <foreground color="-1"/>
                       <text value=""/>
+                    </properties>
+                  </component>
+                  <component id="f3dd9" class="javax.swing.JButton" binding="MERGEButton" default-binding="true">
+                    <constraints>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-1315861"/>
+                      <font style="1"/>
+                      <foreground color="-16777216"/>
+                      <text value="MERGE"/>
                     </properties>
                   </component>
                 </children>
