--- a/src/Scatter.form
+++ b/src/Scatter.form
@@ -310,7 +310,7 @@
               </component>
             </children>
           </grid>
-          <grid id="366b1" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="366b1" binding="mSSXButtonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="12" bottom="0" right="12"/>
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -331,7 +331,7 @@
                   <text value="MSSX"/>
                 </properties>
               </component>
-              <component id="6afcf" class="javax.swing.JLabel">
+              <component id="6afcf" class="javax.swing.JLabel" binding="ssxIcon">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="24" height="-1"/>
