--- a/src/Scatter.form
+++ b/src/Scatter.form
@@ -5,6 +5,7 @@
       <xy x="20" y="20" width="1592" height="1180"/>
     </constraints>
     <properties>
+      <autoscrolls value="false"/>
       <minimumSize width="900" height="600"/>
       <opaque value="false"/>
       <preferredSize width="900" height="600"/>
