--- a/src/version4/MSSX.form
+++ b/src/version4/MSSX.form
@@ -56,6 +56,7 @@
                     </constraints>
                     <properties>
                       <background color="-13419191"/>
+                      <foreground color="-1"/>
                       <text value="SEC-SAS File"/>
                     </properties>
                   </component>
@@ -86,6 +87,7 @@
                     </constraints>
                     <properties>
                       <background color="-13419191"/>
+                      <foreground color="-11009"/>
                       <text value="UV Trace File"/>
                     </properties>
                   </component>
@@ -137,6 +139,7 @@
                     <constraints border-constraint="West"/>
                     <properties>
                       <background color="-13419191"/>
+                      <foreground color="-1"/>
                       <text value="Set Baseline"/>
                     </properties>
                   </component>
@@ -155,6 +158,7 @@
                 </constraints>
                 <properties>
                   <background color="-13419191"/>
+                  <foreground color="-1"/>
                   <text value="Load and Plot"/>
                 </properties>
               </component>
@@ -184,6 +188,7 @@
                         </constraints>
                         <properties>
                           <background color="-13419191"/>
+                          <foreground color="-1"/>
                           <text value="Calibrate"/>
                         </properties>
                       </component>
@@ -314,6 +319,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13419191"/>
                       <foreground color="-3737345"/>
                       <selected value="true"/>
                       <text value="convert exposure/dead times to minutes"/>
