--- a/src/Subtract.form
+++ b/src/Subtract.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="659" height="513"/>
+      <xy x="20" y="20" width="801" height="513"/>
     </constraints>
     <properties>
       <background color="-13419191"/>
@@ -137,7 +137,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="545d4" binding="OutMergePanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
+          <grid id="545d4" binding="OutMergePanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
@@ -176,6 +176,14 @@
                   <background color="-1315861"/>
                   <foreground color="-12086017"/>
                   <text value="Edit Details"/>
+                </properties>
+              </component>
+              <component id="fc042" class="javax.swing.JButton" binding="stopSubtractButton">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Stop"/>
                 </properties>
               </component>
             </children>
